--- a/Frontend/footer.html
+++ b/Frontend/footer.html
@@ -28,9 +28,9 @@
                 <a href="#">
                     <i class="fas fa-chevron-right"></i> Book
                 </a>
-                <a href="#">
-                    <i class="fas fa-chevron-right"></i> Review
-                </a>
+                <!-- <a href="#"> -->
+                    <!-- <i class="fas fa-chevron-right"></i> Review -->
+                <!-- </a> -->
                 <a href="#">
                     <i class="fas fa-chevron-right"></i> Blogs
                 </a>
